fixed spacing when empty

--- a/css/ponyinfo.css
+++ b/css/ponyinfo.css
@@ -7,6 +7,7 @@ div.ponycard {
 
 div.ponycard > div.src {
 	text-align: right;
+	height: 1.5em;
 }
 
 div.ponycard > div.title {
